@@ -57,6 +57,7 @@ sub test_utf8 {
 ;1;
 # ----------------------------------------------------------------
 __END__
+a               a
 hi              ひ
 ka              カ
 kan             漢
